--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -13140,6 +13140,510 @@
     "\n",
     "df.sort_values('Name', ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>321</td>\n",
+       "      <td>Wailord</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170</td>\n",
+       "      <td>90</td>\n",
+       "      <td>45</td>\n",
+       "      <td>90</td>\n",
+       "      <td>45</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>655</th>\n",
+       "      <td>594</td>\n",
+       "      <td>Alomomola</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>165</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>65</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>131</td>\n",
+       "      <td>Lapras</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>130</td>\n",
+       "      <td>85</td>\n",
+       "      <td>80</td>\n",
+       "      <td>85</td>\n",
+       "      <td>95</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>134</td>\n",
+       "      <td>Vaporeon</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>130</td>\n",
+       "      <td>65</td>\n",
+       "      <td>60</td>\n",
+       "      <td>110</td>\n",
+       "      <td>95</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>320</td>\n",
+       "      <td>Wailmer</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>130</td>\n",
+       "      <td>70</td>\n",
+       "      <td>35</td>\n",
+       "      <td>70</td>\n",
+       "      <td>35</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>290</td>\n",
+       "      <td>Nincada</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Ground</td>\n",
+       "      <td>31</td>\n",
+       "      <td>45</td>\n",
+       "      <td>90</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>462</th>\n",
+       "      <td>415</td>\n",
+       "      <td>Combee</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>42</td>\n",
+       "      <td>30</td>\n",
+       "      <td>42</td>\n",
+       "      <td>70</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603</th>\n",
+       "      <td>543</td>\n",
+       "      <td>Venipede</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>30</td>\n",
+       "      <td>45</td>\n",
+       "      <td>59</td>\n",
+       "      <td>30</td>\n",
+       "      <td>39</td>\n",
+       "      <td>57</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>213</td>\n",
+       "      <td>Shuckle</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>230</td>\n",
+       "      <td>10</td>\n",
+       "      <td>230</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>292</td>\n",
+       "      <td>Shedinja</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Ghost</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90</td>\n",
+       "      <td>45</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>800 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #       Name Type 1  Type 2   HP  Attack  Defense  Sp. Atk  Sp. Def  \\\n",
+       "351  321    Wailord  Water     NaN  170      90       45       90       45   \n",
+       "655  594  Alomomola  Water     NaN  165      75       80       40       45   \n",
+       "142  131     Lapras  Water     Ice  130      85       80       85       95   \n",
+       "145  134   Vaporeon  Water     NaN  130      65       60      110       95   \n",
+       "350  320    Wailmer  Water     NaN  130      70       35       70       35   \n",
+       "..   ...        ...    ...     ...  ...     ...      ...      ...      ...   \n",
+       "314  290    Nincada    Bug  Ground   31      45       90       30       30   \n",
+       "462  415     Combee    Bug  Flying   30      30       42       30       42   \n",
+       "603  543   Venipede    Bug  Poison   30      45       59       30       39   \n",
+       "230  213    Shuckle    Bug    Rock   20      10      230       10      230   \n",
+       "316  292   Shedinja    Bug   Ghost    1      90       45       30       30   \n",
+       "\n",
+       "     Speed  Generation  Legendary  \n",
+       "351     60           3      False  \n",
+       "655     65           5      False  \n",
+       "142     60           1      False  \n",
+       "145     65           1      False  \n",
+       "350     60           3      False  \n",
+       "..     ...         ...        ...  \n",
+       "314     40           3      False  \n",
+       "462     70           4      False  \n",
+       "603     57           5      False  \n",
+       "230      5           2      False  \n",
+       "316     40           3      False  \n",
+       "\n",
+       "[800 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## sort the values of 'HP' column alphabetically in descending order based on 'Type 1' column values \n",
+    "\n",
+    "df.sort_values(['Type 1', 'HP'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>469</td>\n",
+       "      <td>Yanmega</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>86</td>\n",
+       "      <td>76</td>\n",
+       "      <td>86</td>\n",
+       "      <td>116</td>\n",
+       "      <td>56</td>\n",
+       "      <td>95</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>698</th>\n",
+       "      <td>637</td>\n",
+       "      <td>Volcarona</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>85</td>\n",
+       "      <td>60</td>\n",
+       "      <td>65</td>\n",
+       "      <td>135</td>\n",
+       "      <td>105</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>214</td>\n",
+       "      <td>Heracross</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Fighting</td>\n",
+       "      <td>80</td>\n",
+       "      <td>125</td>\n",
+       "      <td>75</td>\n",
+       "      <td>40</td>\n",
+       "      <td>95</td>\n",
+       "      <td>85</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>214</td>\n",
+       "      <td>HeracrossMega Heracross</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Fighting</td>\n",
+       "      <td>80</td>\n",
+       "      <td>185</td>\n",
+       "      <td>115</td>\n",
+       "      <td>40</td>\n",
+       "      <td>105</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>617</td>\n",
+       "      <td>Accelgor</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80</td>\n",
+       "      <td>70</td>\n",
+       "      <td>40</td>\n",
+       "      <td>100</td>\n",
+       "      <td>60</td>\n",
+       "      <td>145</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>98</td>\n",
+       "      <td>Krabby</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30</td>\n",
+       "      <td>105</td>\n",
+       "      <td>90</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>116</td>\n",
+       "      <td>Horsea</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>25</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>120</td>\n",
+       "      <td>Staryu</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30</td>\n",
+       "      <td>45</td>\n",
+       "      <td>55</td>\n",
+       "      <td>70</td>\n",
+       "      <td>55</td>\n",
+       "      <td>85</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>129</td>\n",
+       "      <td>Magikarp</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>55</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>349</td>\n",
+       "      <td>Feebas</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>55</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>800 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                     Name Type 1    Type 2  HP  Attack  Defense  \\\n",
+       "520  469                  Yanmega    Bug    Flying  86      76       86   \n",
+       "698  637                Volcarona    Bug      Fire  85      60       65   \n",
+       "231  214                Heracross    Bug  Fighting  80     125       75   \n",
+       "232  214  HeracrossMega Heracross    Bug  Fighting  80     185      115   \n",
+       "678  617                 Accelgor    Bug       NaN  80      70       40   \n",
+       "..   ...                      ...    ...       ...  ..     ...      ...   \n",
+       "106   98                   Krabby  Water       NaN  30     105       90   \n",
+       "125  116                   Horsea  Water       NaN  30      40       70   \n",
+       "129  120                   Staryu  Water       NaN  30      45       55   \n",
+       "139  129                 Magikarp  Water       NaN  20      10       55   \n",
+       "381  349                   Feebas  Water       NaN  20      15       20   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "520      116       56     95           4      False  \n",
+       "698      135      105    100           5      False  \n",
+       "231       40       95     85           2      False  \n",
+       "232       40      105     75           2      False  \n",
+       "678      100       60    145           5      False  \n",
+       "..       ...      ...    ...         ...        ...  \n",
+       "106       25       25     50           1      False  \n",
+       "125       70       25     60           1      False  \n",
+       "129       70       55     85           1      False  \n",
+       "139       15       20     80           1      False  \n",
+       "381       10       55     80           3      False  \n",
+       "\n",
+       "[800 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## sort the values 'Type 1' column  in ascending and 'HP' in descending order\n",
+    "\n",
+    "df.sort_values(['Type 1', 'HP'], ascending=[1,0])"
+   ]
   }
  ],
  "metadata": {
