--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -13644,6 +13644,13 @@
     "\n",
     "df.sort_values(['Type 1', 'HP'], ascending=[1,0])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Make Changes to the Data"
+   ]
   }
  ],
  "metadata": {
