--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Loading Data in Pandas"
+    ">1. Loading Data in Pandas"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Reading Data in Pandas"
+    ">2. Reading Data in Pandas"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Sorting/Describing Data"
+    ">3. Sorting/Describing Data"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4) Make Changes to the Data"
+    ">4. Make Changes to the Data"
    ]
   }
  ],
