--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -2709,7 +2709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2763,7 +2763,7 @@
        "      <td>45</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2779,7 +2779,7 @@
        "      <td>60</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2795,7 +2795,7 @@
        "      <td>80</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2811,7 +2811,7 @@
        "      <td>80</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>625</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2825,13 +2825,13 @@
        "3  3  VenusaurMega Venusaur  Grass  Poison  80     100      123      122   \n",
        "\n",
        "   Sp. Def  Speed  Generation  Legendary  Total  \n",
-       "0       65     45           1      False    NaN  \n",
-       "1       80     60           1      False    NaN  \n",
-       "2      100     80           1      False    NaN  \n",
-       "3      120     80           1      False    NaN  "
+       "0       65     45           1      False    318  \n",
+       "1       80     60           1      False    405  \n",
+       "2      100     80           1      False    525  \n",
+       "3      120     80           1      False    625  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
