--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -10705,7 +10705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -11524,7 +11524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -12457,7 +12457,7 @@
        "799      130       90     70           6       True  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12477,7 +12477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -12626,7 +12626,7 @@
        "max    180.000000     6.00000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12639,7 +12639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -12878,7 +12878,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12891,7 +12891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -13130,7 +13130,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13143,7 +13143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -13382,7 +13382,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13395,7 +13395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -13634,7 +13634,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13654,7 +13654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -13776,7 +13776,7 @@
        "3      120     80           1      False    626  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13791,7 +13791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -13908,7 +13908,7 @@
        "3      120     80           1      False  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13923,7 +13923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -13951,7 +13951,6 @@
        "      <th>Name</th>\n",
        "      <th>Type 1</th>\n",
        "      <th>Type 2</th>\n",
-       "      <th>Total</th>\n",
        "      <th>HP</th>\n",
        "      <th>Attack</th>\n",
        "      <th>Defense</th>\n",
@@ -13960,6 +13959,7 @@
        "      <th>Speed</th>\n",
        "      <th>Generation</th>\n",
        "      <th>Legendary</th>\n",
+       "      <th>Total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13969,7 +13969,6 @@
        "      <td>Bulbasaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>591</td>\n",
        "      <td>45</td>\n",
        "      <td>49</td>\n",
        "      <td>49</td>\n",
@@ -13978,6 +13977,7 @@
        "      <td>45</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
+       "      <td>318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -13985,7 +13985,6 @@
        "      <td>Ivysaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>750</td>\n",
        "      <td>60</td>\n",
        "      <td>62</td>\n",
        "      <td>63</td>\n",
@@ -13994,6 +13993,7 @@
        "      <td>60</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
+       "      <td>405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -14001,7 +14001,6 @@
        "      <td>Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>970</td>\n",
        "      <td>80</td>\n",
        "      <td>82</td>\n",
        "      <td>83</td>\n",
@@ -14010,6 +14009,7 @@
        "      <td>80</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
+       "      <td>525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -14017,7 +14017,6 @@
        "      <td>VenusaurMega Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>1170</td>\n",
        "      <td>80</td>\n",
        "      <td>100</td>\n",
        "      <td>123</td>\n",
@@ -14026,26 +14025,27 @@
        "      <td>80</td>\n",
        "      <td>1</td>\n",
        "      <td>False</td>\n",
+       "      <td>625</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0  1              Bulbasaur  Grass  Poison    591  45      49       49   \n",
-       "1  2                Ivysaur  Grass  Poison    750  60      62       63   \n",
-       "2  3               Venusaur  Grass  Poison    970  80      82       83   \n",
-       "3  3  VenusaurMega Venusaur  Grass  Poison   1170  80     100      123   \n",
+       "   #                   Name Type 1  Type 2  HP  Attack  Defense  Sp. Atk  \\\n",
+       "0  1              Bulbasaur  Grass  Poison  45      49       49       65   \n",
+       "1  2                Ivysaur  Grass  Poison  60      62       63       80   \n",
+       "2  3               Venusaur  Grass  Poison  80      82       83      100   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison  80     100      123      122   \n",
        "\n",
-       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
-       "0       65       65     45           1      False  \n",
-       "1       80       80     60           1      False  \n",
-       "2      100      100     80           1      False  \n",
-       "3      122      120     80           1      False  "
+       "   Sp. Def  Speed  Generation  Legendary  Total  \n",
+       "0       65     45           1      False    318  \n",
+       "1       80     60           1      False    405  \n",
+       "2      100     80           1      False    525  \n",
+       "3      120     80           1      False    625  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14063,14 +14063,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['#', 'Name', 'Type 1', 'Type 2', 'Total', 'HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Generation', 'Legendary']\n"
+      "['#', 'Name', 'Type 1', 'Type 2', 'HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Generation', 'Legendary', 'Total']\n"
      ]
     }
    ],
@@ -14084,7 +14084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -14112,7 +14112,6 @@
        "      <th>Name</th>\n",
        "      <th>Type 1</th>\n",
        "      <th>Type 2</th>\n",
-       "      <th>Legendary</th>\n",
        "      <th>Total</th>\n",
        "      <th>HP</th>\n",
        "      <th>Attack</th>\n",
@@ -14121,6 +14120,7 @@
        "      <th>Sp. Def</th>\n",
        "      <th>Speed</th>\n",
        "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -14130,8 +14130,7 @@
        "      <td>Bulbasaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>False</td>\n",
-       "      <td>591</td>\n",
+       "      <td>318</td>\n",
        "      <td>45</td>\n",
        "      <td>49</td>\n",
        "      <td>49</td>\n",
@@ -14139,6 +14138,7 @@
        "      <td>65</td>\n",
        "      <td>45</td>\n",
        "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -14146,8 +14146,7 @@
        "      <td>Ivysaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>False</td>\n",
-       "      <td>750</td>\n",
+       "      <td>405</td>\n",
        "      <td>60</td>\n",
        "      <td>62</td>\n",
        "      <td>63</td>\n",
@@ -14155,6 +14154,7 @@
        "      <td>80</td>\n",
        "      <td>60</td>\n",
        "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -14162,8 +14162,7 @@
        "      <td>Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>False</td>\n",
-       "      <td>970</td>\n",
+       "      <td>525</td>\n",
        "      <td>80</td>\n",
        "      <td>82</td>\n",
        "      <td>83</td>\n",
@@ -14171,6 +14170,7 @@
        "      <td>100</td>\n",
        "      <td>80</td>\n",
        "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -14178,8 +14178,7 @@
        "      <td>VenusaurMega Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1170</td>\n",
+       "      <td>625</td>\n",
        "      <td>80</td>\n",
        "      <td>100</td>\n",
        "      <td>123</td>\n",
@@ -14187,6 +14186,7 @@
        "      <td>120</td>\n",
        "      <td>80</td>\n",
        "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -14194,8 +14194,7 @@
        "      <td>Charmander</td>\n",
        "      <td>Fire</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>553</td>\n",
+       "      <td>309</td>\n",
        "      <td>39</td>\n",
        "      <td>52</td>\n",
        "      <td>43</td>\n",
@@ -14203,28 +14202,29 @@
        "      <td>50</td>\n",
        "      <td>65</td>\n",
        "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   #                   Name Type 1  Type 2  Legendary  Total  HP  Attack  \\\n",
-       "0  1              Bulbasaur  Grass  Poison      False    591  45      49   \n",
-       "1  2                Ivysaur  Grass  Poison      False    750  60      62   \n",
-       "2  3               Venusaur  Grass  Poison      False    970  80      82   \n",
-       "3  3  VenusaurMega Venusaur  Grass  Poison      False   1170  80     100   \n",
-       "4  4             Charmander   Fire     NaN      False    553  39      52   \n",
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
        "\n",
-       "   Defense  Sp. Atk  Sp. Def  Speed  Generation  \n",
-       "0       49       65       65     45           1  \n",
-       "1       63       80       80     60           1  \n",
-       "2       83      100      100     80           1  \n",
-       "3      123      122      120     80           1  \n",
-       "4       43       60       50     65           1  "
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
