--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -14876,6 +14876,270 @@
     "\n",
     "df.loc[(df['Type 1'] == 'Grass') & (df['Type 2'] == 'Poison')]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Weedle</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>195</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>30</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>718</th>\n",
+       "      <td>650</td>\n",
+       "      <td>Chespin</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>313</td>\n",
+       "      <td>56</td>\n",
+       "      <td>61</td>\n",
+       "      <td>65</td>\n",
+       "      <td>48</td>\n",
+       "      <td>45</td>\n",
+       "      <td>38</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719</th>\n",
+       "      <td>651</td>\n",
+       "      <td>Quilladin</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>405</td>\n",
+       "      <td>61</td>\n",
+       "      <td>78</td>\n",
+       "      <td>95</td>\n",
+       "      <td>56</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>720</th>\n",
+       "      <td>652</td>\n",
+       "      <td>Chesnaught</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Fighting</td>\n",
+       "      <td>530</td>\n",
+       "      <td>88</td>\n",
+       "      <td>107</td>\n",
+       "      <td>122</td>\n",
+       "      <td>74</td>\n",
+       "      <td>75</td>\n",
+       "      <td>64</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>672</td>\n",
+       "      <td>Skiddo</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>350</td>\n",
+       "      <td>66</td>\n",
+       "      <td>65</td>\n",
+       "      <td>48</td>\n",
+       "      <td>62</td>\n",
+       "      <td>57</td>\n",
+       "      <td>52</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>673</td>\n",
+       "      <td>Gogoat</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>531</td>\n",
+       "      <td>123</td>\n",
+       "      <td>100</td>\n",
+       "      <td>62</td>\n",
+       "      <td>97</td>\n",
+       "      <td>81</td>\n",
+       "      <td>68</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>89 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                   Name Type 1    Type 2  Total   HP  Attack  Defense  \\\n",
+       "0      1              Bulbasaur  Grass    Poison    318   45      49       49   \n",
+       "1      2                Ivysaur  Grass    Poison    405   60      62       63   \n",
+       "2      3               Venusaur  Grass    Poison    525   80      82       83   \n",
+       "3      3  VenusaurMega Venusaur  Grass    Poison    625   80     100      123   \n",
+       "16    13                 Weedle    Bug    Poison    195   40      35       30   \n",
+       "..   ...                    ...    ...       ...    ...  ...     ...      ...   \n",
+       "718  650                Chespin  Grass       NaN    313   56      61       65   \n",
+       "719  651              Quilladin  Grass       NaN    405   61      78       95   \n",
+       "720  652             Chesnaught  Grass  Fighting    530   88     107      122   \n",
+       "740  672                 Skiddo  Grass       NaN    350   66      65       48   \n",
+       "741  673                 Gogoat  Grass       NaN    531  123     100       62   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0         65       65     45           1      False  \n",
+       "1         80       80     60           1      False  \n",
+       "2        100      100     80           1      False  \n",
+       "3        122      120     80           1      False  \n",
+       "16        20       20     50           1      False  \n",
+       "..       ...      ...    ...         ...        ...  \n",
+       "718       48       45     38           6      False  \n",
+       "719       56       58     57           6      False  \n",
+       "720       74       75     64           6      False  \n",
+       "740       62       57     52           6      False  \n",
+       "741       97       81     68           6      False  \n",
+       "\n",
+       "[89 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## get the rows containing 'Grass' in 'Type 1' column or 'Poison' in 'Type 2' column\n",
+    "\n",
+    "df.loc[(df['Type 1'] == 'Grass') | (df['Type 2'] == 'Poison')]"
+   ]
   }
  ],
  "metadata": {
