--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -15140,6 +15140,159 @@
     "\n",
     "df.loc[(df['Type 1'] == 'Grass') | (df['Type 2'] == 'Poison')]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Vileplume</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>490</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>85</td>\n",
+       "      <td>110</td>\n",
+       "      <td>90</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>71</td>\n",
+       "      <td>Victreebel</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>490</td>\n",
+       "      <td>80</td>\n",
+       "      <td>105</td>\n",
+       "      <td>65</td>\n",
+       "      <td>100</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>652</th>\n",
+       "      <td>591</td>\n",
+       "      <td>Amoonguss</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>464</td>\n",
+       "      <td>114</td>\n",
+       "      <td>85</td>\n",
+       "      <td>70</td>\n",
+       "      <td>85</td>\n",
+       "      <td>80</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                   Name Type 1  Type 2  Total   HP  Attack  Defense  \\\n",
+       "2      3               Venusaur  Grass  Poison    525   80      82       83   \n",
+       "3      3  VenusaurMega Venusaur  Grass  Poison    625   80     100      123   \n",
+       "50    45              Vileplume  Grass  Poison    490   75      80       85   \n",
+       "77    71             Victreebel  Grass  Poison    490   80     105       65   \n",
+       "652  591              Amoonguss  Grass  Poison    464  114      85       70   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "2        100      100     80           1      False  \n",
+       "3        122      120     80           1      False  \n",
+       "50       110       90     50           1      False  \n",
+       "77       100       70     70           1      False  \n",
+       "652       85       80     30           5      False  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## get the rows containing 'Grass' in 'Type 1' column and 'Poison' in 'Type 2' column and values for 'HP' > 70\n",
+    "\n",
+    "df.loc[(df['Type 1'] == 'Grass') & (df['Type 2'] == 'Poison') & (df['HP'] > 70)]"
+   ]
   }
  ],
  "metadata": {
