--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -15143,15 +15143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "## get the rows containing 'Grass' in 'Type 1' column and 'Poison' in 'Type 2' column and values for 'HP' > 70\n",
     "\n",
-    "filtered_csv = df.loc[(df['Type 1'] == 'Grass') & (df['Type 2'] == 'Poison') & (df['HP'] > 70)]\n",
+    "df_filtered = df.loc[(df['Type 1'] == 'Grass') & (df['Type 2'] == 'Poison') & (df['HP'] > 70)]\n",
     "\n",
-    "filtered_csv.to_csv('Filtered.csv', index=False)"
+    "## reset the index, drop=True removes the old index column\n",
+    "\n",
+    "df_filtered = df_filtered.reset_index(drop=True) \n",
+    "\n",
+    "# export the filtered df with reset index in a new csv\n",
+    "\n",
+    "df_filtered.to_csv('Filtered.csv')"
    ]
   }
  ],
