--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -18272,6 +18272,13 @@
     "\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Aggregate Statistics (Groupby)"
+   ]
   }
  ],
  "metadata": {
