--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -19559,6 +19559,47 @@
     "\n",
     "df.groupby(['Type 1']).count()['Count']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Type 1  Type 2  \n",
+       "Bug     Electric     2\n",
+       "        Fighting     2\n",
+       "        Fire         2\n",
+       "        Flying      14\n",
+       "        Ghost        1\n",
+       "                    ..\n",
+       "Water   Ice          3\n",
+       "        Poison       3\n",
+       "        Psychic      5\n",
+       "        Rock         4\n",
+       "        Steel        1\n",
+       "Name: Count, Length: 136, dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## check how many pokemons belong to each group and sub-groups in the 'Count' column\n",
+    "\n",
+    "df.groupby(['Type 1', 'Type 2']).count()['Count']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Working with Large Amounts of Data"
+   ]
   }
  ],
  "metadata": {
