--- a/pandas_essentials/pandas_essentials.ipynb
+++ b/pandas_essentials/pandas_essentials.ipynb
@@ -21860,6 +21860,26 @@
     "    print(\"Chunk Data Frame:\")\n",
     "    print(df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## create a new data frame containing the same column names as before\n",
+    "\n",
+    "new_df = df.DataFrame(columns=df.columns)\n",
+    "\n",
+    "## read data from 'Modified.csv' 5 rows at a time\n",
+    "## and get the 'Type 1' grouped data and count  added to the new data frame in chunks\n",
+    "## pd.concat() merges two dataframes\n",
+    "\n",
+    "for df in pd.read_csv('Modified.csv', chunksize=5):\n",
+    "    results = df.groupby(['Type 1']).count()\n",
+    "    new_df = pd.concat([new_df, results])\n",
+    "    print(new_df)\n"
+   ]
   }
  ],
  "metadata": {
