--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -4,14 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### print 'hello world!' 10 times"
+    "#### Print 'hello world!' 10 times"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n",
+      "hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(10):\n",
     "    print('hello world!')"
@@ -19,8 +36,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "5ba173b049a33984e07fc21724363571335feab220ce92f9c3102f4b12a1a839"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
