--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Print 'hello world!' 10 times"
+    "##### Print 'hello world!' 10 times"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -17,21 +17,62 @@
      "output_type": "stream",
      "text": [
       "hello world!\n",
+      "0\n",
       "hello world!\n",
+      "1\n",
       "hello world!\n",
+      "2\n",
       "hello world!\n",
+      "3\n",
       "hello world!\n",
+      "4\n",
       "hello world!\n",
+      "5\n",
       "hello world!\n",
+      "6\n",
       "hello world!\n",
+      "7\n",
       "hello world!\n",
-      "hello world!\n"
+      "8\n",
+      "hello world!\n",
+      "9\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
-    "    print('hello world!')"
+    "    print('hello world!')\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Print odd numbers 10 times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i % 2 == 1:\n",
+    "        print(i)"
    ]
   }
  ],
