--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -72,7 +72,9 @@
    "source": [
     "for i in range(10):\n",
     "    if i % 2 == 1:\n",
-    "        print(i)"
+    "        print(i)\n",
+    "    else:\n",
+    "        pass"
    ]
   }
  ],
