--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +75,72 @@
     "        print(i)\n",
     "    else:\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Iterate through a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "milk\n",
+      "black pepper\n",
+      "toothpaste\n",
+      "eggs\n",
+      "toast\n",
+      "avocados\n"
+     ]
+    }
+   ],
+   "source": [
+    "grocery_list = ['milk', 'black pepper', 'toothpaste', 'eggs', 'toast', 'avocados']\n",
+    "for items in grocery_list:\n",
+    "    print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "208\n",
+      "221\n",
+      "195\n",
+      "188\n",
+      "178\n",
+      "185\n",
+      "188\n",
+      "213\n",
+      "181\n",
+      "211\n",
+      "190\n",
+      "188\n",
+      "210\n",
+      "200\n",
+      "208\n",
+      "250\n",
+      "174\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = [208, 221, 195, 188, 178, 185, 188, 213, 181 ,211 ,190, 188, 210 , 200 , 208, 250, 174]\n",
+    "for weight in weights:\n",
+    "    print(weight)"
    ]
   }
  ],
