--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -109,8 +109,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Find the average weight of team players"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -118,29 +125,31 @@
      "output_type": "stream",
      "text": [
       "208\n",
-      "221\n",
-      "195\n",
-      "188\n",
-      "178\n",
-      "185\n",
-      "188\n",
-      "213\n",
-      "181\n",
-      "211\n",
-      "190\n",
-      "188\n",
-      "210\n",
-      "200\n",
-      "208\n",
-      "250\n",
-      "174\n"
+      "429\n",
+      "624\n",
+      "812\n",
+      "990\n",
+      "1175\n",
+      "1363\n",
+      "1576\n",
+      "1757\n",
+      "1968\n",
+      "2158\n",
+      "2346\n",
+      "2556\n",
+      "2756\n",
+      "2964\n",
+      "3214\n",
+      "3388\n"
      ]
     }
    ],
    "source": [
     "weights = [208, 221, 195, 188, 178, 185, 188, 213, 181 ,211 ,190, 188, 210 , 200 , 208, 250, 174]\n",
+    "total_weight = 0\n",
     "for weight in weights:\n",
-    "    print(weight)"
+    "    total_weight = total_weight + weight \n",
+    "print(total_weight)"
    ]
   }
  ],
